@@ -16,7 +16,6 @@ pipeline {
     stage ('Build') {
       steps {
       sh '''
-                    export MAVEN_OPTS="--add-opens java.base/java.util=ALL-UNNAMED"
                     mvn clean package
          '''
        }
